Thu Jul 17 21:41:37 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/Server_Info.cpp:
          Fix a Solaris compiler warning.

Thu Jul 17 21:25:23 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/double_start/clt.conf:
        * orbsvcs/tests/ImplRepo/double_start/restart.sh:
          Fuzz fix.

Thu Jul 17 19:14:51 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/double_start/client.cpp:
        * orbsvcs/tests/ImplRepo/double_start/clt.conf:
          add the reply close retry option and update the client output.

        * orbsvcs/tests/ImplRepo/ping_interrupt/server.cpp:
          Make the test wchar compatible.

Thu Jul 17 13:19:54 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.h:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.cpp:
          Make the new global strategy option wchar compatible.

Wed Jul 16 16:42:52 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/AsyncAccessManager.h:
        * orbsvcs/ImplRepo_Service/AsyncAccessManager.cpp:
        * orbsvcs/ImplRepo_Service/ImR_Locator.idl:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.h:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/Locator_Repository.h:
        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
        * orbsvcs/ImplRepo_Service/Server_Info.cpp:
        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.h:
        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:
        * orbsvcs/ImplRepo_Service/UpdateableServerInfo.h:
        * orbsvcs/ImplRepo_Service/UpdateableServerInfo.cpp:
          This addresses certain situations when a primary and backup ImR
          are coupled for fault tolerance, and a client detects the failure
          of a server. The client may send a request to the backup ImR even